添加基础表格和分页

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -2,3 +2,12 @@
 .content {
     padding-left: 200px;
 }
+
+.container{
+  margin: 10px;
+}
+
+.pagination{
+  margin-top: 10px;
+  float: right;
+}
