调整容器，增加固定表头、固定列的table

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -1,6 +1,11 @@
 
 .content {
-    padding-left: 200px;
+    position: absolute;
+    left: 200px;
+    right: 0;
+    bottom: 0;
+    top: 50px;
+    overflow-y:scroll;
 }
 
 .container{
